<resources>
    <string name="app_name">Voice Gesture</string>
    <string name="ajustes">Ajustes</string>
    <string name="settings">Settings</string>
    <string name="traducir">Traducir</string>
    <string name="translate">Translate</string>
    <string name="guardar">Guardar</string>
    <string name="save">Save</string>
    <string name="volver">Volver</string>
    <string name="return1">Return</string>
    <string name="seleccione_voz">Seleccione voz:</string>
    <string name="seleccione_idioma">Seleccione idioma:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="todo">TODO</string>
    <string name="leer_datos">Leer Datos</string>
    <string name="leer_letra">Leer Letra</string>
    <string name="leer_palabra">Leer Palabra</string>
    <string name="borrar_palabra">Borrar Palabra</string>

    <string-array name="languages">
        <item>Español</item>
        <item>Ingles</item>
        <item>Frances</item>
        <item>Italiano</item>
        <item>Portugues</item>
    </string-array>

</resources>